--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "express": "^4.18.1",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
